--- a/applications/allocations-server/src/main/resources/application.properties
+++ b/applications/allocations-server/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8081
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_allocations_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 registration.server.endpoint=http://localhost:8083
+security.basic.enabled=false
+management.security.enabled=false
