--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         springBootVersion = "1.5.7.RELEASE"
         springVersion = "4.3.8.RELEASE"
         mysqlVersion = "6.0.6"
-        springCloudDependenciesVersion = "Edgware.RELEASE"
+        springCloudDependenciesVersion = "Edgware.SR4"
         springCloudServicesVersion = "1.6.4.RELEASE"
     }
 
