--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -2,11 +2,13 @@ applications:
 - name: tracker-allocations
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-nikhil.apps.evans.pal.pivotal.io
+  #- route: allocations-pal-nikhil.apps.evans.pal.pivotal.io
+  - route: allocations-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
+    #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-allocations-database
   - tracker-service-registry
