--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -2,13 +2,14 @@ applications:
 - name: tracker-backlog
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
-  #- route: backlog-pal-nikhil.apps.evans.pal.pivotal.io
-  - route: backlog-pal-roshan.apps.evans.pal.pivotal.io
+  - route: backlog-pal-nikhil.apps.evans.pal.pivotal.io
+  #- route: backlog-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
-    #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
+    - REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-backlog-database
   - tracker-service-registry
+  - tracker-circuit-breaker-dashboard
