--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,8 +6,8 @@ applications:
   #- route: allocations-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    - REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
+  #env:
+    #- REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-allocations-database
