--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -3,11 +3,11 @@ applications:
   path: ./applications/backlog-server/build/libs/backlog-server.jar
   routes:
   - route: backlog-pal-nikhil.apps.evans.pal.pivotal.io
-  #- route: backlog-pal-roshan.apps.evans.pal.pivotal.io
+    #- route: backlog-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    - REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
+  #env:
+    #- REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-backlog-database
