--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,8 +6,8 @@ applications:
   #- route: timesheets-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    - REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
+  #env:
+  #  - REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-timesheets-database
