--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,10 +6,14 @@ applications:
   #- route: allocations-pal-roshan.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  #env:
+  env:
+    GRANT_TYPE: client_credentials
+    SECURITY_USER_NAME: actuator
+    SECURITY_USER_PASSWORD: operations4red
     #- REGISTRATION_SERVER_ENDPOINT: http://registration-pal-nikhil.apps.evans.pal.pivotal.io
     #REGISTRATION_SERVER_ENDPOINT: http://registration-pal-roshan.apps.evans.pal.pivotal.io
   services:
   - tracker-allocations-database
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
+  - tracker-sso
