--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         mysqlVersion = "6.0.6"
         springCloudDependenciesVersion = "Edgware.SR4"
         springCloudServicesVersion = "1.6.4.RELEASE"
+        springCloudSsoVersion = "2.0.0.RELEASE"
     }
 
     repositories {
